--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Shane Tomlinson <stomlinson@mozilla.com> (https://shanetomlinson.com)",
   "license": "MPL-2.0",
@@ -14,6 +14,7 @@
     "n-readlines": "^0.2.8"
   },
   "devDependencies": {
+    "jest": "^22.4.3",
     "node-uuid": "^1.4.8"
   }
 }
