--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws-sdk": "^2.234.1",
     "commander": "^2.15.1",
+    "csv-parse": "2.4.0",
     "n-readlines": "^0.2.8"
   },
   "devDependencies": {
