--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint index.js bin lib tests"
   },
   "author": "Shane Tomlinson <stomlinson@mozilla.com> (https://shanetomlinson.com)",
   "license": "MPL-2.0",
@@ -14,7 +15,11 @@
     "n-readlines": "^0.2.8"
   },
   "devDependencies": {
-    "jest": "^22.4.3",
+    "eslint": "^4.19.1",
+    "eslint-plugin-fxa": "^1.0.0",
+    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-sorting": "^0.3.0",
+    "jest": "^22.4.4",
     "node-uuid": "^1.4.8"
   }
 }
