--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "dependencies": {
     "aws-sdk": "^2.234.1",
     "commander": "^2.15.1",
-    "n-readlines": "^0.2.8"
+    "n-readlines": "^0.2.8",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-plugin-fxa": "^1.0.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-sorting": "^0.3.0",
-    "jest": "^22.4.4",
-    "node-uuid": "^1.4.8"
+    "jest": "^22.4.4"
   }
 }
